--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,6 @@
             </button>
             <a class="navbar-brand" href="#">码匠社区</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <form class="navbar-form navbar-left">
                 <div class="form-group">
@@ -26,7 +24,7 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登录</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=3c69ece9e2d197625efa&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">我 <span class="caret"></span></a>
@@ -34,8 +32,6 @@
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出登录</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">退出</a></li>
                     </ul>
                 </li>
             </ul>
