--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -9,13 +9,18 @@ body{
     float: right;
     margin-bottom: 15px;
 }
-
 .media-object {
-    width: 41px;
-    height: 41px;
+    width: 50px;
+    height: 50px;
 }
 .text-desc{
     font-size: 12px;
     font-weight: normal;
     color: #999;
+}
+.profile{
+    margin-top: 15px;
+}
+.section{
+    margin-top: 15px;
 }
